--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 #tkinter==9.6.0
-scipy==1.11.0
-numpy==1.24.3
-pyaudio==0.2.13
-sounddevice==0.4.4
-pydub==0.25.1
+#scipy==1.11.0
+#numpy==1.24.3
+#pyaudio==0.2.13
+#sounddevice==0.4.4
+#pydub==0.25.1
